# rust-eutils

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  generate_img.sh  sync.sh
src/: config.rs  disease.rs  dual.rs  eutils.rs  linker.rs  main.rs  model.rs  openai.rs  response.rs  utils.rs
src/slurm/: config.rs  db.rs  dg.rs  mod.rs  model.rs  ssh.rs  sync.rs
