[package]
name = "rust-eutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "0.5.0-rc.2", features = ["json"] }
# rocket_contrib = "0.4.11"

log = "0.4.0"
log4rs = "1.2.0"
chrono = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

once_cell = "1.17"

crossbeam-deque = "0.8"
serde-xml-rs = "0.6.0"

regex = "1.7.1"
csv = "1.2"
